# clipb

./: .gitignore  LICENSE.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: app-ci.yml  app-release.yml
scripts/: run-tests.mjs
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
src/components/: ClipCard.tsx  EmptyState.tsx  QuickCopyWindow.tsx  SettingsModal.tsx  Sidebar.tsx
src/hooks/: useClipboardWatcher.ts
src/lib/: backup.ts  backupFormat.ts  clipCopy.ts  clipboardSuppression.ts  clipboardTextCapture.ts  clipboardTextCaptureRuntime.ts  dates.ts  db.ts  defaultSettings.ts  hash.ts  imageClipboard.ts  privacy.ts  privacyPatterns.ts  retention.ts  themes.ts  updater.ts
tests/: backupFormat.test.ts  clipCopy.test.ts  clipDetection.test.ts  clipboardSuppression.test.ts  clipboardTextCapture.test.ts  dates.test.ts  defaultSettings.test.ts  hash.test.ts  privacy.test.ts  privacyPatterns.test.ts  retention.test.ts  themes.test.ts
